Geometry Nodes: Align rotation to vector node doesn't flip rotation when vector is multiplied by -1 #85763

Closed
opened 2021-02-18 12:35:19 +01:00 by Wannes Malfait · 3 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-18 10:11, hash: b166429fc9

Short description of error
When you add an Align Rotation to Vector Node, the rotation of the object doesn't seem to be influenced by the sign of the vector to align to. In the example images below the result is the same for all multiples of the vector (0,0,1).
image.png

The expected behaviour would be that the cones point in the opposite direction when the vector is changed to (0,0,-1) from (0,0,1). This does happen when the pivot is changed from auto to X or Y.

image.png

Exact steps for others to reproduce the error
See the blend file
Geometry-Nodes.blend

Or open default blend file

  • Add a plane and a cone
  • Add a geometry nodes modifier to the plane
  • Copy the node group from the images above.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-18 10:11, hash: `b166429fc9` **Short description of error** When you add an `Align Rotation to Vector` Node, the rotation of the object doesn't seem to be influenced by the sign of the vector to align to. In the example images below the result is the same for all multiples of the vector `(0,0,1)`. ![image.png](https://archive.blender.org/developer/F9814783/image.png) The expected behaviour would be that the cones point in the opposite direction when the vector is changed to `(0,0,-1)` from `(0,0,1)`. This does happen when the pivot is changed from `auto` to `X` or `Y`. ![image.png](https://archive.blender.org/developer/F9814790/image.png) **Exact steps for others to reproduce the error** See the blend file [Geometry-Nodes.blend](https://archive.blender.org/developer/F9814787/Geometry-Nodes.blend) Or open default blend file - Add a plane and a cone - Add a geometry nodes modifier to the plane - Copy the node group from the images above.
Author
Member

Added subscriber: @wannes.malfait

Added subscriber: @wannes.malfait

This issue was referenced by 359d0029fe

This issue was referenced by 359d0029fe7601163c449730d42f12d84163fcd8
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2021-02-19 11:38:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85763
No description provided.